# Time-Series-Analysis-with-Python-Cookbook-Second-Edition

./: README.md
code/Bonus_Ch15/: README.md  (+5 more)
code/Ch1/: Chapter_1.ipynb  README.md  aws.cfg  pyproject.toml  python_env_setup.txt  requirements.in  requirements.txt  terminal.sh
code/Ch11/: Chapter 11.ipynb  README.md  pyproject.toml  requirements.in  requirements.txt  utils.py
code/Ch13/: Chapter 13 (use this one).ipynb  Chapter 13 - pytorch.ipynb  Chapter 13 - tensorflow.ipynb  Chapter 13.ipynb  Chapter_13.ipynb  README.md  TEMP Latest Chapter 13.ipynb  darts.pkl  darts.pkl.ckpt  darts_tuned_model.pt  darts_tuned_model.pt.ckpt  pyproject.toml  requirements.in  requirements.txt  utils.py
code/Ch13/archive/: Chapter 13 - tensorflow.ipynb  Chapter 13.ipynb
code/Ch13/darts_logs/LSTMBestModel/: _model.pth.tar
code/Ch13/darts_logs/LSTMBestModel/checkpoints/: best-epoch=78-val_loss=0.23.ckpt  last-epoch=82.ckpt
code/Ch13/darts_logs/LSTMHyperTune_trial_0/: _model.pth.tar
code/Ch13/darts_logs/LSTMHyperTune_trial_0/checkpoints/: best-epoch=78-val_loss=0.23.ckpt  last-epoch=82.ckpt
code/Ch13/darts_logs/LSTMHyperTune_trial_1/: _model.pth.tar
code/Ch13/darts_logs/LSTMHyperTune_trial_1/checkpoints/: best-epoch=13-val_loss=0.63.ckpt  last-epoch=28.ckpt
code/Ch13/darts_logs/LSTMHyperTune_trial_2/: _model.pth.tar
code/Ch13/darts_logs/LSTMHyperTune_trial_2/checkpoints/: best-epoch=0-val_loss=0.23.ckpt  last-epoch=15.ckpt
code/Ch13/darts_logs/LSTMHyperTune_trial_3/: _model.pth.tar
code/Ch13/darts_logs/LSTMHyperTune_trial_3/checkpoints/: best-epoch=32-val_loss=0.32.ckpt  last-epoch=47.ckpt
code/Ch13/darts_logs/LSTMHyperTune_trial_4/: _model.pth.tar
code/Ch13/darts_logs/LSTMHyperTune_trial_4/checkpoints/: best-epoch=6-val_loss=0.23.ckpt  last-epoch=21.ckpt
code/Ch13/darts_logs/LSTMHyperTune_trial_5/: _model.pth.tar
code/Ch13/darts_logs/LSTMHyperTune_trial_5/checkpoints/: best-epoch=29-val_loss=0.23.ckpt  last-epoch=44.ckpt
code/Ch13/darts_logs/LSTMHyperTune_trial_6/: _model.pth.tar
code/Ch13/darts_logs/LSTMHyperTune_trial_6/checkpoints/: best-epoch=7-val_loss=0.24.ckpt  last-epoch=22.ckpt
code/Ch13/darts_logs/LSTMHyperTune_trial_7/: _model.pth.tar
code/Ch13/darts_logs/LSTMHyperTune_trial_7/checkpoints/: best-epoch=0-val_loss=0.24.ckpt  last-epoch=15.ckpt
code/Ch13/darts_logs/LSTMHyperTune_trial_8/: _model.pth.tar
code/Ch13/darts_logs/LSTMHyperTune_trial_8/checkpoints/: best-epoch=25-val_loss=0.25.ckpt  last-epoch=30.ckpt
code/Ch13/darts_logs/LSTMHyperTune_trial_9/: _model.pth.tar
code/Ch13/darts_logs/LSTMHyperTune_trial_9/checkpoints/: best-epoch=6-val_loss=0.23.ckpt  last-epoch=21.ckpt
code/Ch13/darts_logs/Zur_BlockRNN/: _model.pth.tar
code/Ch13/darts_logs/Zur_BlockRNN/checkpoints/: best-epoch=20-val_loss=0.07.ckpt  last-epoch=35.ckpt
code/Ch13/darts_logs/Zur_BlockRNN/logs/: events.out.tfevents.1753909882.Tareks-MacBook-Pro-2022.local.84049.8  events.out.tfevents.1753909924.Tareks-MacBook-Pro-2022.local.84049.9  hparams.yaml
code/Ch13/darts_logs/Zur_NHITSModel/: _model.pth.tar
code/Ch13/darts_logs/Zur_TCNModel/: _model.pth.tar
code/Ch13/darts_logs/Zur_TCNModel/checkpoints/: best-epoch=9-val_loss=0.25.ckpt  last-epoch=24.ckpt
code/Ch13/darts_logs/energy_blocklstm/: _model.pth.tar
code/Ch13/darts_logs/energy_blocklstm/checkpoints/: best-epoch=31-val_loss=0.13.ckpt  last-epoch=46.ckpt
code/Ch13/darts_logs/energy_lstm/: _model.pth.tar
code/Ch13/darts_logs/energy_lstm/checkpoints/: best-epoch=104-val_loss=0.20.ckpt  last-epoch=119.ckpt
code/Ch13/lightning_logs/version_0/: events.out.tfevents.1753910518.Tareks-MacBook-Pro-2022.local.84049.14
code/Ch13/lightning_logs/version_1/: events.out.tfevents.1753910705.Tareks-MacBook-Pro-2022.local.84049.15  hparams.yaml
code/Ch13/lightning_logs/version_10/: events.out.tfevents.1753911482.Tareks-MacBook-Pro-2022.local.84049.24
code/Ch13/lightning_logs/version_11/: events.out.tfevents.1753911541.Tareks-MacBook-Pro-2022.local.84049.25  hparams.yaml
code/Ch13/lightning_logs/version_2/: events.out.tfevents.1753910756.Tareks-MacBook-Pro-2022.local.84049.16  hparams.yaml
code/Ch13/lightning_logs/version_3/: events.out.tfevents.1753910803.Tareks-MacBook-Pro-2022.local.84049.17  hparams.yaml
code/Ch13/lightning_logs/version_4/: events.out.tfevents.1753910956.Tareks-MacBook-Pro-2022.local.84049.18  hparams.yaml
code/Ch13/lightning_logs/version_5/: events.out.tfevents.1753911016.Tareks-MacBook-Pro-2022.local.84049.19  hparams.yaml
code/Ch13/lightning_logs/version_6/: events.out.tfevents.1753911064.Tareks-MacBook-Pro-2022.local.84049.20  hparams.yaml
code/Ch13/lightning_logs/version_7/: events.out.tfevents.1753911244.Tareks-MacBook-Pro-2022.local.84049.21  hparams.yaml
code/Ch13/lightning_logs/version_8/: events.out.tfevents.1753911379.Tareks-MacBook-Pro-2022.local.84049.22  hparams.yaml
code/Ch13/lightning_logs/version_9/: events.out.tfevents.1753911429.Tareks-MacBook-Pro-2022.local.84049.23  hparams.yaml
code/Ch13/logs/: best_model.keras
code/Ch13/logs/train/: events.out.tfevents.1753909812.Tareks-MacBook-Pro-2022.local.84049.0.v2  events.out.tfevents.1759947467.Tareks-MacBook-Pro-2022.local.91351.0.v2
code/Ch13/logs/validation/: events.out.tfevents.1753909813.Tareks-MacBook-Pro-2022.local.84049.1.v2  events.out.tfevents.1759947468.Tareks-MacBook-Pro-2022.local.91351.1.v2
code/Ch13/neuralforecast/: AutoLSTM_0.ckpt  alias_to_model.pkl  dataset.pkl
code/Ch13/nf_tuned_model/: AutoLSTM_0.ckpt  configuration.pkl  dataset.pkl
code/Ch15/: Chapter 15.ipynb  Chapter_15.ipynb  pyproject.toml  requirements.txt
code/Ch3/: Chapter 3.ipynb  Chapter_3.ipynb  README.md  cloud.cfg  new_movies_2.csv  pipe_demo.csv  pyproject.toml  requirements.in  requirements.txt  tab_demo.csv
code/Ch5/: Chapter 5.ipynb  Chapter_5.ipynb  README.md  pyproject.toml  requirements.txt
code/Ch6/: Chapter 6.ipynb  Chapter_6.ipynb  README.md  pyproject.toml  requirements.in  requirements.txt  utils.py
code/Ch8/: Chapter 8.ipynb  Chapter_8.ipynb  README.md  pyproject.toml  requirements.txt  utils.py
(+145 files in other folders)
