[project]
name = "ch1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13.5"
dependencies = [
    "appnope==0.1.4",
    "asttokens==3.0.0",
    "beautifulsoup4==4.14.2",
    "bokeh==3.8.0",
    "boto3==1.40.46",
    "botocore==1.40.46",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "cloudpickle==3.1.1",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "dask==2025.9.1",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "distributed==2025.9.1",
    "et-xmlfile==2.0.0",
    "executing==2.2.1",
    "fsspec==2025.9.0",
    "html5lib==1.1",
    "idna==3.10",
    "ipykernel==6.30.1",
    "ipython==9.6.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jmespath==1.0.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "locket==1.0.0",
    "lxml==6.0.2",
    "lz4==4.4.4",
    "markupsafe==3.0.3",
    "matplotlib-inline==0.1.7",
    "memory-profiler==0.61.0",
    "modin==0.37.1",
    "msgpack==1.1.1",
    "narwhals==2.7.0",
    "nest-asyncio==1.6.0",
    "numpy==2.3.3",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "partd==1.4.2",
    "pexpect==4.9.0",
    "pillow==11.3.0",
    "pip==26.0",
    "pipdeptree==2.28.0",
    "platformdirs==4.4.0",
    "polars==1.34.0",
    "polars-runtime-32==1.34.0",
    "prompt-toolkit==3.0.52",
    "psutil==7.1.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==21.0.0",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "requests==2.32.5",
    "s3fs==0.4.2",
    "s3transfer==0.14.0",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sortedcontainers==2.4.0",
    "soupsieve==2.8",
    "stack-data==0.6.3",
    "tblib==3.1.0",
    "toolz==1.0.0",
    "tornado==6.5.2",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "wcwidth==0.2.14",
    "webencodings==0.5.1",
    "xyzservices==2025.4.0",
    "zict==3.0.0",
]
