[project]
name = "ch11"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12.11"
dependencies = [
    "adagio==0.2.6",
    "appdirs==1.4.4",
    "appnope==0.1.4",
    "arch==7.2.0",
    "asttokens==3.0.0",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.3",
    "cloudpickle==3.1.1",
    "cmdstanpy==1.2.5",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "coreforecast==0.0.16",
    "cycler==0.12.1",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "executing==2.2.1",
    "fonttools==4.60.1",
    "fs==2.4.16",
    "fsspec==2025.9.0",
    "fugue==0.9.1",
    "holidays==0.82",
    "idna==3.10",
    "importlib-resources==6.5.2",
    "ipykernel==6.30.1",
    "ipython==9.6.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "joblib==1.5.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "kiwisolver==1.4.9",
    "llvmlite==0.45.1",
    "lxml==6.0.2",
    "matplotlib==3.10.6",
    "matplotlib-inline==0.1.7",
    "nest-asyncio==1.6.0",
    "numba==0.62.1",
    "numpy==2.3.3",
    "packaging==25.0",
    "pandas==2.3.3",
    "pandas-datareader==0.10.0",
    "parso==0.8.5",
    "patsy==1.0.1",
    "pexpect==4.9.0",
    "pillow==11.3.0",
    "pip==25.2",
    "pipdeptree==2.28.0",
    "platformdirs==4.4.0",
    "prompt-toolkit==3.0.52",
    "prophet==1.1.7",
    "psutil==7.1.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==21.0.0",
    "pygments==2.19.2",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyzmq==27.1.0",
    "requests==2.32.5",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
    "setuptools==80.9.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "stanio==0.5.1",
    "statsforecast==2.0.2",
    "statsmodels==0.14.5",
    "threadpoolctl==3.6.0",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "triad==0.9.8",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "utilsforecast==0.2.14",
    "wcwidth==0.2.14",
]
