[project]
name = "ch13"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11.13"
dependencies = [
    "absl-py==2.3.1",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.0",
    "aiosignal==1.4.0",
    "alembic==1.16.5",
    "appnope==0.1.4",
    "asttokens==3.0.0",
    "astunparse==1.6.3",
    "attrs==25.4.0",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "cloudpickle==3.1.1",
    "colorlog==6.9.0",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "coreforecast==0.0.16",
    "cycler==0.12.1",
    "darts==0.38.0",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "executing==2.2.1",
    "fastjsonschema==2.21.2",
    "filelock==3.20.0",
    "flatbuffers==25.9.23",
    "fonttools==4.60.1",
    "frozenlist==1.8.0",
    "fsspec==2025.9.0",
    "gast==0.6.0",
    "google-pasta==0.2.0",
    "grpcio==1.75.1",
    "h5py==3.14.0",
    "holidays==0.82",
    "idna==3.10",
    "ipykernel==6.30.1",
    "ipython==9.6.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "keras==3.12.0",
    "kiwisolver==1.4.9",
    "libclang==18.1.1",
    "lightning-utilities==0.15.2",
    "llvmlite==0.45.1",
    "mako==1.3.10",
    "markdown==3.9",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.6",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "ml-dtypes==0.5.3",
    "mpmath==1.3.0",
    "msgpack==1.1.2",
    "multidict==6.7.0",
    "namex==0.1.0",
    "narwhals==2.7.0",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "neuralforecast==3.1.2",
    "nfoursid==1.0.2",
    "numba==0.62.1",
    "numpy==2.1.3",
    "opt-einsum==3.4.0",
    "optree==0.17.0",
    "optuna==4.5.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "patsy==1.0.1",
    "pexpect==4.9.0",
    "pillow==11.3.0",
    "pip==25.2",
    "pipdeptree==2.28.0",
    "platformdirs==4.5.0",
    "plotly==6.3.1",
    "prompt-toolkit==3.0.52",
    "propcache==0.3.2",
    "protobuf==5.29.5",
    "psutil==7.1.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==21.0.0",
    "pygments==2.19.2",
    "pyod==2.0.5",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pytorch-lightning==2.5.2",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "ray==2.49.2",
    "referencing==0.36.2",
    "requests==2.32.5",
    "rich==14.1.0",
    "rpds-py==0.27.1",
    "scikit-learn==1.7.2",
    "scipy==1.16.2",
    "setuptools==80.9.0",
    "shap==0.48.0",
    "six==1.17.0",
    "slicer==0.0.8",
    "sqlalchemy==2.0.43",
    "stack-data==0.6.3",
    "statsmodels==0.14.5",
    "sympy==1.14.0",
    "tensorboard==2.19.0",
    "tensorboard-data-server==0.7.2",
    "tensorboardx==2.6.4",
    "tensorflow==2.19.1",
    "tensorflow-io-gcs-filesystem==0.37.1",
    "termcolor==3.1.0",
    "threadpoolctl==3.6.0",
    "torch==2.8.0",
    "torchmetrics==1.8.2",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "utilsforecast==0.2.14",
    "wcwidth==0.2.14",
    "werkzeug==3.1.3",
    "wheel==0.45.1",
    "wrapt==1.17.3",
    "xarray==2025.10.1",
    "yarl==1.22.0",
]
