[project]
name = "ch13"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12.11"
dependencies = [
    "aeon==1.3.0",
    "appnope==0.1.4",
    "asttokens==3.0.0",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "deprecated==1.2.18",
    "executing==2.2.1",
    "filelock==3.20.0",
    "fonttools==4.60.1",
    "fsspec==2025.9.0",
    "holidays==0.82",
    "ipykernel==6.30.1",
    "ipython==9.6.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "kiwisolver==1.4.9",
    "llvmlite==0.44.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.6",
    "matplotlib-inline==0.1.7",
    "mpmath==1.3.0",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "numba==0.61.2",
    "numpy==2.2.6",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "patsy==1.0.1",
    "pexpect==4.9.0",
    "pillow==11.3.0",
    "pip==25.2",
    "pipdeptree==2.28.0",
    "platformdirs==4.5.0",
    "prompt-toolkit==3.0.52",
    "psutil==7.1.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pygments==2.19.2",
    "pyod>=2.0.6",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyzmq==27.1.0",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
    "setuptools==80.9.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "statsmodels==0.14.5",
    "suod>=0.1.4",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "torch==2.8.0",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "wcwidth==0.2.14",
    "wrapt==1.17.3",
]
