[project]
name = "ch15"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12.11"
dependencies = [
    "absl-py==2.3.1",
    "adagio==0.2.6",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.0",
    "aiosignal==1.4.0",
    "appdirs==1.4.4",
    "appnope==0.1.4",
    "asttokens==3.0.0",
    "attrs==25.4.0",
    "captum==0.8.0",
    "cloudpickle==3.1.1",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "coreforecast==0.0.16",
    "cycler==0.12.1",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "executing==2.2.1",
    "fastjsonschema==2.21.2",
    "filelock==3.20.0",
    "fonttools==4.60.1",
    "frozenlist==1.8.0",
    "fs==2.4.16",
    "fsspec==2025.9.0",
    "fugue==0.9.1",
    "grpcio==1.75.1",
    "holidays==0.82",
    "idna==3.10",
    "ipykernel==6.30.1",
    "ipython==9.6.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "kaleido==0.2.1",
    "kiwisolver==1.4.9",
    "lightning-utilities==0.15.2",
    "llvmlite==0.45.1",
    "markdown==3.9",
    "markupsafe==3.0.3",
    "matplotlib==3.10.6",
    "matplotlib-inline==0.1.7",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "narwhals==2.7.0",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "neuralprophet==0.9.0",
    "numba==0.62.1",
    "numpy==1.26.4",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "patsy==1.0.1",
    "pexpect==4.9.0",
    "pillow==11.3.0",
    "pip==25.2",
    "pipdeptree==2.28.0",
    "platformdirs==4.5.0",
    "plotly==6.3.1",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "protobuf==6.32.1",
    "psutil==7.1.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==21.0.0",
    "pygments==2.19.2",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pytorch-lightning==2.5.5",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "referencing==0.36.2",
    "rpds-py==0.27.1",
    "scipy==1.15.3",
    "setuptools==80.9.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "statsforecast==2.0.2",
    "statsmodels==0.14.5",
    "sympy==1.14.0",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "threadpoolctl==3.6.0",
    "torch==2.8.0",
    "torchmetrics==1.8.2",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "triad==0.9.8",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "utilsforecast==0.2.14",
    "wcwidth==0.2.14",
    "werkzeug==3.1.3",
    "yarl==1.22.0",
]
