[project]
name = "ch3"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13.5"
dependencies = [
    "adlfs==2025.8.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.0",
    "aiosignal==1.4.0",
    "appnope==0.1.4",
    "asttokens==3.0.0",
    "attrs==25.4.0",
    "azure-core==1.35.1",
    "azure-datalake-store==0.0.53",
    "azure-identity==1.25.1",
    "azure-storage-blob==12.26.0",
    "boto3==1.40.46",
    "botocore==1.40.46",
    "cachetools==6.2.0",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cryptography==46.0.2",
    "cycler==0.12.1",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "et-xmlfile==2.0.0",
    "executing==2.2.1",
    "fonttools==4.60.1",
    "frozenlist==1.8.0",
    "fsspec==2025.9.0",
    "gcsfs==2025.9.0",
    "google-api-core==2.25.2",
    "google-auth==2.41.1",
    "google-auth-oauthlib==1.2.2",
    "google-cloud-core==2.4.3",
    "google-cloud-storage==3.4.0",
    "google-crc32c==1.7.1",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.70.0",
    "idna==3.10",
    "ipykernel==6.30.1",
    "ipython==9.6.0",
    "ipython-pygments-lexers==1.1.1",
    "isodate==0.7.2",
    "jedi==0.19.2",
    "jmespath==1.0.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.6",
    "matplotlib-inline==0.1.7",
    "msal==1.34.0",
    "msal-extensions==1.3.1",
    "multidict==6.7.0",
    "nest-asyncio==1.6.0",
    "numpy==2.3.3",
    "oauthlib==3.3.1",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "pexpect==4.9.0",
    "pillow==11.3.0",
    "pip==26.0",
    "pipdeptree==2.28.0",
    "platformdirs==4.4.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.0",
    "proto-plus==1.26.1",
    "protobuf==6.32.1",
    "psutil==7.1.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==21.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.23",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyzmq==27.1.0",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "rsa==4.9.1",
    "s3fs==0.4.2",
    "s3transfer==0.14.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "tornado==6.5.2",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "wcwidth==0.2.14",
    "yarl==1.22.0",
]
