[project]
name = "ch5"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13, <3.14"
dependencies = [
    "appnope==0.1.4",
    "asn1crypto==1.5.1",
    "asttokens==3.0.0",
    "awswrangler==3.13.0",
    "beautifulsoup4==4.14.2",
    "boto3==1.40.46",
    "botocore==1.40.46",
    "certifi==2025.10.5",
    "cffi==1.17.1",
    "charset-normalizer==3.4.3",
    "cloudpickle==3.1.1",
    "comm==0.2.3",
    "cryptography==46.0.0",
    "curl-cffi==0.13.0",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "dnspython==2.8.0",
    "executing==2.2.1",
    "filelock==3.19.1",
    "frozendict==2.4.6",
    "idna==3.10",
    "influxdb3-python==0.16.0",
    "ipykernel==6.30.1",
    "ipython==9.6.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jmespath==1.0.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "lxml==5.4.0",
    "matplotlib-inline==0.1.7",
    "multitasking==0.0.12",
    "nest-asyncio==1.6.0",
    "numpy==2.3.3",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "peewee==3.18.2",
    "pexpect==4.9.0",
    "pip==25.2",
    "pipdeptree==2.28.0",
    "platformdirs==4.4.0",
    "prompt-toolkit==3.0.52",
    "protobuf==6.31.1",
    "psutil==7.1.0",
    "psycopg==3.2.10",
    "psycopg2-binary==2.9.10",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==20.0.0",
    "pycparser==2.23",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pymongo==4.15.2",
    "pyopenssl==25.3.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "reactivex==4.0.4",
    "redshift-connector==2.1.8",
    "requests==2.32.5",
    "s3transfer==0.14.0",
    "scramp==1.4.6",
    "setuptools==80.9.0",
    "six==1.17.0",
    "snowflake-connector-python==3.18.0",
    "snowflake-snowpark-python==1.40.0",
    "snowflake-sqlalchemy==1.7.7",
    "sortedcontainers==2.4.0",
    "soupsieve==2.8",
    "sqlalchemy==1.4.54",
    "sqlalchemy-redshift==0.8.14",
    "stack-data==0.6.3",
    "tomlkit==0.13.3",
    "tornado==6.5.2",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "urllib3==2.5.0",
    "wcwidth==0.2.14",
    "websockets==15.0.1",
    "wheel==0.45.1",
    "yfinance==0.2.66",
]
