[project]
name = "ch5"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13.5"
dependencies = [
    "appnope==0.1.4",
    "asttokens==3.0.0",
    "comm==0.2.3",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "executing==2.2.1",
    "ipykernel==6.30.1",
    "ipython==9.6.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "matplotlib-inline==0.1.7",
    "nest-asyncio==1.6.0",
    "numpy==2.3.3",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "pexpect==4.9.0",
    "pip==26.0",
    "pipdeptree==2.28.0",
    "platformdirs==4.4.0",
    "prompt-toolkit==3.0.52",
    "psutil==7.1.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyzmq==27.1.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "tornado==6.5.2",
    "traitlets==5.14.3",
    "tzdata==2025.2",
    "wcwidth==0.2.14",
]
