[project]
name = "ch8"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13.5"
dependencies = [
    "anyio==4.11.0",
    "appnope==0.1.4",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "async-lru==2.0.5",
    "attrs==25.4.0",
    "babel==2.17.0",
    "beautifulsoup4==4.14.2",
    "bleach==6.2.0",
    "bokeh==3.8.0",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "colorcet==3.1.0",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "executing==2.2.1",
    "fastjsonschema==2.21.2",
    "fonttools==4.60.1",
    "fqdn==1.5.1",
    "h11==0.16.0",
    "holoviews==1.21.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "hvplot==0.12.1",
    "idna==3.10",
    "ipykernel==6.30.1",
    "ipython==9.6.0",
    "ipython-pygments-lexers==1.1.1",
    "isoduration==20.11.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "json5==0.12.1",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.3.0",
    "jupyter-server==2.17.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.4.9",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "kiwisolver==1.4.9",
    "lark==1.3.0",
    "linkify-it-py==2.0.3",
    "markdown==3.9",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.6",
    "matplotlib-inline==0.1.7",
    "mdit-py-plugins==0.5.0",
    "mdurl==0.1.2",
    "mistune==3.1.4",
    "narwhals==2.7.0",
    "nbclient==0.10.2",
    "nbconvert==7.17.0",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "notebook-shim==0.2.4",
    "numpy==2.3.3",
    "packaging==25.0",
    "pandas==2.3.3",
    "pandocfilters==1.5.1",
    "panel==1.8.2",
    "param==2.2.1",
    "parso==0.8.5",
    "patsy==1.0.1",
    "pexpect==4.9.0",
    "pillow==11.3.0",
    "pip==25.2",
    "pipdeptree==2.28.0",
    "platformdirs==4.4.0",
    "plotly==6.3.1",
    "prometheus-client==0.23.1",
    "prompt-toolkit==3.0.52",
    "psutil==7.1.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pycparser==2.23",
    "pygments==2.19.2",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==4.0.0",
    "pytz==2025.2",
    "pyviz-comms==3.0.6",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "referencing==0.36.2",
    "requests==2.32.5",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rfc3987-syntax==1.1.0",
    "rpds-py==0.27.1",
    "scikit-learn==1.7.2",
    "scipy==1.16.2",
    "seaborn==0.13.2",
    "send2trash==1.8.3",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "stack-data==0.6.3",
    "statsmodels==0.14.5",
    "terminado==0.18.1",
    "threadpoolctl==3.6.0",
    "tinycss2==1.4.0",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "types-python-dateutil==2.9.0.20250822",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "uc-micro-py==1.0.3",
    "uri-template==1.3.0",
    "urllib3==2.5.0",
    "wcwidth==0.2.14",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "xyzservices==2025.4.0",
]
